<resources>
    <string name="app_name">Spiritual Quotient</string>
    <string name="select_a_section_to_start">Select a section to start.</string>
    <string name="knowledge">Knowledge</string>
    <string name="cultivation">Cultivation</string>
    <string name="surrender">Surrender</string>
    <string name="behaviour">Behaviour</string>
    <string name="powers">Powers</string>
    <string name="experience">Experience</string>
    <string name="view_results">View Results</string>
    <string name="section">Section</string>
    <string name="count">Count</string>
    <string name="previous">Previous</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="question">Question</string>
    <string name="option1">Option1</string>
    <string name="option2">Option2</string>
    <string name="option3">Option3</string>
    <string name="option4">Option4</string>
    <string name="start_over">Retake</string>
    <string name="share">Share</string>
    <string name="rank">Rank</string>
    <string name="menu_info">Info and Help</string>
    <string name="menu_share">Share</string>
    <string name="menu_set">About This Quiz</string>
    <string name="menu_join">More Spirituality Apps</string>
    <string name="menu_deldb">Delete Data</string>
    <string name="menu_load">Load Quiz</string>
    <string name="menu_save">Save Quiz</string>
    <string name="menu_edit">Edit Quiz</string>
    <string name="option5">Option5</string>
    <string name="option6">Option6</string>
    <string name="menu_dumpquiz">Dump Quiz</string>
    <string name="menu_dumpdb">Dump DB</string>
    <string name="analyze">Analyze</string>
    <string name="incomplete">Please complete the quiz</string>
    <string name="overall">Overall</string>
    <string name="unknown">Unknown</string>
    <string name="nodata">\?</string>
    <string name="permReqTitle">Permission Required</string>
    <string name="permRationale">Permission to save your result screenshot is required. The screenshot will be saved in your media folder.</string>
    <string name="knowSq">Know your Spiritual Quotient</string>
    <string name="shareText">Check the attached screenshot. These are my awesome SQ results. Get your SQ from this free android app : https://play.google.com/store/apps/details?id=in.oormi.spiritualquotient</string>
    <string name="menuShareSubject">Find your Spiritual Quotient!</string>
    <string name="axisTitle">SQ (X) vs Number of people (Y)</string>
    <string name="zoom">Zoom and drag available.</string>
    <string name="format1">%.2f%% users have same SQ (%d) as you.\nAverage SQ is %.2f.</string>
    <string name="format2">%.2f%% users have lower SQ than you, %.2f%% have higher.</string>
    <string name="noNet">No internet connection or server is down. Try again.</string>
    <string name="noNet1">No internet connection or the server is down. Try again.</string>
    <string name="connFail">Failed to connect.</string>
    <string name="dataCleared">All data cleared.</string>
</resources>
