<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/menu_info"
        android:id="@+id/menuInfo"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:title="@string/menu_share"
        android:id="@+id/menuShare"
        app:showAsAction="never"
        app:actionProviderClass=
            "android.support.v7.widget.ShareActionProvider" />
    <item
        android:title="@string/menu_join"
        android:id="@+id/menuMore"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:title="@string/menu_load"
        android:id="@+id/menuLoad"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:title="@string/menu_deldb"
        android:id="@+id/menuDel"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <!--
    <item
        android:title="@string/menu_edit"
        android:id="@+id/menuEdit"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:title="@string/menu_dumpdb"
        android:id="@+id/menuDumpDB"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:title="@string/menu_dumpquiz"
        android:id="@+id/menuDumpQuiz"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    -->
    <item
        android:title="@string/menu_set"
        android:id="@+id/menuAbout"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>

